Fixed the likes counter

--- a/Home Page/styles.css
+++ b/Home Page/styles.css
@@ -205,7 +205,7 @@
     max-width: 640px;
 }
 
-.button {
+.buttondelete {
 	display: inline-block;
     margin: 0;
     padding: 0.75rem 1rem;
@@ -221,6 +221,24 @@
 	cursor: pointer;
 	-webkit-appearance: none;
 	-webkit-font-smoothing: antialiased;
+}
+
+.buttonincr {
+  display: inline-block;
+    margin: 0;
+    padding: 0.75rem 1rem;
+  border: 0;
+  border-radius: 0.317rem;
+  background-color: #aaa;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1rem;
+    line-height: 1.5;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+  cursor: pointer;
+  -webkit-appearance: none;
+  -webkit-font-smoothing: antialiased;
 }
 
 .button:hover {
