--- a/Flask/templates/upload_page.html
+++ b/Flask/templates/upload_page.html
@@ -3,15 +3,17 @@
 
 <head>
     <title>
-        Single Image Display
+        Upload Page
     </title>
 </head>
 
 <body>
+
     <div class="topnav" id="myTopnav">
         {% include 'nav_bar.html' %}
     </div>
-    <a href="{{url_for('show_user_profile',thepath = image)}}"><img src="{{url_for('static', filename=image)}}"></a>
+    <h1>Upload Page</h1>
+
 </body>
 
-</html>`
+</html>
