Small readability changes

--- a/Flask/templates/upload_page.html
+++ b/Flask/templates/upload_page.html
@@ -19,12 +19,12 @@
         <br>
         Category:
         <br>
-        <input type="radio" name="cat" value="animals"> Animals<br>
-        <input type="radio" name="cat" value="humans"> Humans<br>
-        <input type="radio" name="cat" value="nature"> Nature <br>
-        <input type="radio" name="cat" value="other"> Other <br>  
+        <input type="radio" name="category" value="animals"> Animals<br>
+        <input type="radio" name="category" value="humans"> Humans<br>
+        <input type="radio" name="category" value="nature"> Nature <br>
+        <input type="radio" name="category" value="other"> Other <br>  
         Enter Caption
-        <input type="text" name = "capt"> <br>      
+        <input type="text" name = "caption"> <br>      
         <input type="submit" value="Upload">
     </form>
 
