CSS partly integrated

--- a/Flask/templates/image_single.html
+++ b/Flask/templates/image_single.html
@@ -1,18 +1,39 @@
-<!DOCTYPE=html>
+<!DOCTYPE html>
 <html>
 
 <head>
     <title>
         Single Image Display
     </title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="../static/css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'> 
+    
 </head>
 
 <body>
     <div class="topnav" id="myTopnav">
         {% include 'nav_bar.html' %}
     </div>
-    <h1>{{caption}}</h1>
-    <a href="{{url_for('show_single_image',thepath = image)}}"><img src="{{url_for('static', filename=image)}}"></a>
+    
+            <div class="description">
+                <h1>{{caption}}</h1>
+                <div class="content">
+                    <p>
+                        <button class="buttonincr" ><i class="button-icon icon-heart"></i>Me Likey</button>
+                        <input class="likesCounter" type="text" value="0" >
+                    </p>
+                    <p>
+                        <button class="buttondelete">Delete</button>        
+                    </p>
+                </div>
+            </div>
+            <a href="{{url_for('show_single_image',thepath = image)}}"><img src="{{url_for('static', filename=image)}}"></a>
+<!-- / Item 02 -->
+    <script type="text/javascript" src="../static/js/action.js"></script>
+
 </body>
 
-</html>`
+</html>
