--- a/Flask/templates/image_single.html
+++ b/Flask/templates/image_single.html
@@ -10,12 +10,21 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/styleshome.css')}}">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'> 
+    <link rel="stylesheet" href="{{url_for('static', filename='css/navstyles.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css')}}"> 
     
 </head>
 
 <body>
-    <div class="topnav" id="myTopnav">
-        {% include 'nav_bar.html' %}
+    <div id='cssmenu'>
+        <ul>
+            <li class='active'><a href="{{ url_for('images')}}"><span>Home</span></a></li>
+            <li><a href="{{url_for('category_fun', category='nature')}}"><span>Nature</span></a></li>
+            <li><a href="{{url_for('category_fun', category='humans')}}"><span>Humans</span></a></li>
+            <li><a href="{{url_for('category_fun', category='animals')}}"><span>Animals</span></a></li>
+            <li><a href="{{url_for('category_fun', category='other')}}"><span>Other</span></a></li>
+            <li class='last'><a href="{{url_for('upload_page')}}"><span>Upload</span></a></li>
+        </ul>
     </div>
     
             <div class="description">
