--- a/Flask/templates/images.html
+++ b/Flask/templates/images.html
@@ -5,17 +5,48 @@
     <title>
         All Categories
     </title>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/navstyles.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css')}}"> 
+
 </head>
 
 <body>
-
-    <div class="topnav" id="myTopnav">
-        {% include 'nav_bar.html' %}
+	<header>
+        <h1>Swag Style <br> <span>[ SelfieLessActs ]</span></h1>
+    </header>
+    <div id="top"></div>
+    <div id='cssmenu'>
+        <ul>
+        	<li class='active'><a href="{{ url_for('images')}}"><span>Home</span></a></li>
+            <li><a href="{{url_for('category_fun', category='nature')}}"><span>Nature</span></a></li>
+            <li><a href="{{url_for('category_fun', category='humans')}}"><span>Humans</span></a></li>
+            <li><a href="{{url_for('category_fun', category='animals')}}"><span>Animals</span></a></li>
+            <li><a href="{{url_for('category_fun', category='other')}}"><span>Other</span></a></li>
+            <li class='last'><a href="{{url_for('upload_page')}}"><span>Upload</span></a></li>
+        </ul>
     </div>
 
-    {% for image in images %}
-    <a href="{{url_for('show_single_image',thepath = image)}}"><img src="{{url_for('static', filename=image)}}"></a>
-    {% endfor %}
+    <section class="gallery">
+		<div class="row">
+			<ul>
+				<a href="#" class="close"></a>
+				{% for image in images %}
+				<li>
+					<a href="{{url_for('show_single_image',thepath = image)}}">
+						<img src="{{url_for('static', filename=image)}}" alt="">
+					</a>
+				</li>
+				{% endfor %}
+			</ul>
+		</div>
+	</section>
 
 </body>
 
