--- a/Flask/templates/image_single.html
+++ b/Flask/templates/image_single.html
@@ -31,16 +31,18 @@
                 <h1>{{caption}}</h1>
                 <div class="content">
                     <p>
-                        <button class="buttonincr" ><i class="button-icon icon-heart"></i>Me Likey</button>
+                        <button class="buttonincr" ><i class="button-icon icon-heart"></i>Upvote</button>
                         <input class="likesCounter" type="text" value="0" />
                     </p>
                     <p>
-                        <button class="buttondelete">Delete</button>        
+                        <form id = "upload_form" action = "{{url_for('deleted')}}" method="POST" enctype="multipart/form-data">
+                            <button name="Delete" value="{{image}}" type="submit" class = "buttondelete">Delete</button>
+                        </form>
+
                     </p>
                 </div>
             </div>
             <a href="{{url_for('show_single_image',thepath = image)}}"><img src="{{url_for('static', filename=image)}}"></a>
-<!-- / Item 02 -->
     <script type="text/javascript" src="{{url_for('static', filename='js/action.js')}}"></script>
 
 </body>
