Database name changes

--- a/Flask/templates/images.html
+++ b/Flask/templates/images.html
@@ -19,7 +19,7 @@
 
 <body>
 	<header>
-        <h1>Swag Style <br> <span>[ SelfieLessActs ]</span></h1>
+        <h1>Cloud Computing <br> <span>[ SelfieLessActs ]</span></h1>
     </header>
     <div id="top"></div>
     <div id='cssmenu'>
