VM1 and VM2 separated

--- a/VM1/Flask/templates/image_single.html
+++ b/VM1/Flask/templates/image_single.html
@@ -23,6 +23,8 @@
             <li><a href="{{url_for('category_fun', category='humans')}}"><span>Humans</span></a></li>
             <li><a href="{{url_for('category_fun', category='animals')}}"><span>Animals</span></a></li>
             <li><a href="{{url_for('category_fun', category='other')}}"><span>Other</span></a></li>
+            <li><a href="{{url_for('signup')}}"><span>Sign Up</span></a></li>
+
             <li class='last'><a href="{{url_for('upload_page')}}"><span>Upload</span></a></li>
         </ul>
     </div>
