--- a/VM1/Flask/templates/nav_bar.html
+++ b/VM1/Flask/templates/nav_bar.html
@@ -4,3 +4,4 @@
 <a href="{{url_for('category_fun', category='nature')}}">Nature</a>
 <a href="{{url_for('category_fun', category='other')}}">Other</a>
 <a href="{{url_for('upload_page')}}">Upload</a>
+<a href="{{url_for('signup')}}"> Sign Up</a>
