--- a/VM1/Flask/templates/login.html
+++ b/VM1/Flask/templates/login.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Sign Up!
+            Log In!
         </title>
         <link rel="stylesheet" href="{{url_for('static', filename='css/navstyles.css')}}">
 
@@ -14,19 +14,27 @@
                 <li><a href="{{url_for('category_fun', category='humans')}}"><span>Humans</span></a></li>
                 <li><a href="{{url_for('category_fun', category='animals')}}"><span>Animals</span></a></li>
                 <li><a href="{{url_for('category_fun', category='other')}}"><span>Other</span></a></li>
-                <li><a href="{{url_for('signup')}}"><span>Sign Up</span></a></li>
-
+                {% block b %}
+                {% if session['user']%}
+                <li><a href="{{url_for('logout')}}"><span>Log Out</span></a></li>
                 <li class='last'><a href="{{url_for('upload_page')}}"><span>Upload</span></a></li>
+                
+                {% else %}
+                <li><a href="{{url_for('signup')}}"><span>Sign Up</span></a></li>
+                <li class='last'><a href="{{url_for('login')}}"><span>Log In</span></a></li>
+
+                {% endif %}
+                {% endblock %}
             </ul>
         </div>
         <h1>Sign Up</h1>
-        <form id = "signup_form" action = "{{url_for('signupdata')}}" method="POST" enctype="multipart/form-data">
+        <form id = "login_form" action = "{{url_for('logindata')}}" method="POST" enctype="multipart/form-data">
               
             Enter username
             <input type="text" name = "username"> <br>      
             Enter Password
             <input type="password" name = "password"> <br>    
-            <input type="submit" value="Sign Up"><br>
+            <input type="submit" value="Log In"><br>
             {% block body %}
             {% if error %}
             Incorrect UserName or Password
