--- a/VM1/Flask/templates/signup.html
+++ b/VM1/Flask/templates/signup.html
@@ -14,10 +14,17 @@
                 <li><a href="{{url_for('category_fun', category='humans')}}"><span>Humans</span></a></li>
                 <li><a href="{{url_for('category_fun', category='animals')}}"><span>Animals</span></a></li>
                 <li><a href="{{url_for('category_fun', category='other')}}"><span>Other</span></a></li>
-                <li><a href="{{url_for('signup')}}"><span>Sign Up</span></a></li>
-
+                {% block b %}
+                {% if session['user']%}
+                <li><a href="{{url_for('logout')}}"><span>Log Out</span></a></li>
                 <li class='last'><a href="{{url_for('upload_page')}}"><span>Upload</span></a></li>
-            </ul>
+                
+                {% else %}
+                <li><a href="{{url_for('signup')}}"><span>Sign Up</span></a></li>
+                <li class='last'><a href="{{url_for('login')}}"><span>Log In</span></a></li>
+
+                {% endif %}
+                {% endblock %}
         </div>
         <h1>Sign Up</h1>
         <form id = "signup_form" action = "{{url_for('signupdata')}}" method="POST" enctype="multipart/form-data">
