--- a/VM1/Flask/templates/upload_page.html
+++ b/VM1/Flask/templates/upload_page.html
@@ -20,7 +20,8 @@
             {% block b %}
             {% if session['user']%}
             <li><a href="{{url_for('logout')}}"><span>Log Out</span></a></li>
-            <li class='last'><a href="{{url_for('upload_page')}}"><span>Upload</span></a></li>
+			<li><a href="{{url_for('upload_page')}}"><span>Upload</span></a></li>
+			<li class='last'><a href = "{{url_for('delete_user')}}"> <span>Delete Account</span></a></li>
 			
             {% else %}
 			<li><a href="{{url_for('signup')}}"><span>Sign Up</span></a></li>
@@ -37,13 +38,13 @@
         <br>
         Category:
         <br>
-        <input type="radio" name="category" value="animals"> Animals<br>
-        <input type="radio" name="category" value="humans"> Humans<br>
-        <input type="radio" name="category" value="nature"> Nature <br>
-        <input type="radio" name="category" value="other"> Other <br>  
+        {% for cat in categories%}
+        <input type="radio" name={{cat}} value="animals"> {{cat}<br>
+        {% endfor %}  
         Enter Caption
         <input type="text" name = "caption"> <br>      
-        <input type="submit" value="Upload">
+        <input type="submit" value="Upload"><br>
+
     </form>
 
 </body>
