--- a/VM1/Flask/templates/images.html
+++ b/VM1/Flask/templates/images.html
@@ -24,12 +24,9 @@
     <div id="top"></div>
     <div id='cssmenu'>
         <ul>
-        	<li class='active'><a href="{{ url_for('images')}}"><span>Home</span></a></li>
-            <li><a href="{{url_for('category_fun', category='nature')}}"><span>Nature</span></a></li>
-            <li><a href="{{url_for('category_fun', category='humans')}}"><span>Humans</span></a></li>
-            <li><a href="{{url_for('category_fun', category='animals')}}"><span>Animals</span></a></li>
-            <li><a href="{{url_for('category_fun', category='other')}}"><span>Other</span></a></li>
-            {% block b %}
+            <li><a href="{{url_for(category_show)}}"><span>Category</span></a></li>
+            
+			{% block b %}
             {% if session['user']%}
             <li><a href="{{url_for('logout')}}"><span>Log Out</span></a></li>
 			<li><a href="{{url_for('upload_page')}}"><span>Upload</span></a></li>
@@ -41,9 +38,9 @@
 
 			{% endif %}
 			{% endblock %}
+			
         </ul>
     </div>
-
     <section class="gallery">
 		<div class="row">
 			<ul>
