--- a/VM1/Flask/templates/signup.html
+++ b/VM1/Flask/templates/signup.html
@@ -9,11 +9,8 @@
     <body>
         <div id='cssmenu'>
             <ul>
-                <li class='active'><a href="{{ url_for('images')}}"><span>Home</span></a></li>
-                <li><a href="{{url_for('category_fun', category='nature')}}"><span>Nature</span></a></li>
-                <li><a href="{{url_for('category_fun', category='humans')}}"><span>Humans</span></a></li>
-                <li><a href="{{url_for('category_fun', category='animals')}}"><span>Animals</span></a></li>
-                <li><a href="{{url_for('category_fun', category='other')}}"><span>Other</span></a></li>
+                <li><a href="{{url_for(category_show)}}"><span>Category</span></a></li>
+                
                 {% block b %}
                 {% if session['user']%}
                 <li><a href="{{url_for('logout')}}"><span>Log Out</span></a></li>
@@ -23,9 +20,11 @@
                 {% else %}
                 <li><a href="{{url_for('signup')}}"><span>Sign Up</span></a></li>
                 <li class='last'><a href="{{url_for('login')}}"><span>Log In</span></a></li>
-
+    
                 {% endif %}
                 {% endblock %}
+                
+            </ul>
         </div>
         <h1>Sign Up</h1>
         <form id = "signup_form" action = "{{url_for('signupdata')}}" method="POST" enctype="multipart/form-data">
