--- a/VM1/Flask/templates/category.html
+++ b/VM1/Flask/templates/category.html
@@ -16,7 +16,8 @@
 
 	<div id='cssmenu'>
         <ul>
-            <li><a href="{{url_for(category_show)}}"><span>Category</span></a></li>
+			<li><a href="{{url_for('images')}}"><span>Home</span></a></li>
+            <li><a href="{{url_for('category_show')}}"><span>Category</span></a></li>
             
 			{% block b %}
             {% if session['user']%}
