--- a/VM1/Flask/templates/del_cat.html
+++ b/VM1/Flask/templates/del_cat.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        Upload Page
+        Delete Category
     </title>
     <link rel="stylesheet" href="{{url_for('static', filename='css/navstyles.css')}}">
 </head>
@@ -30,23 +30,18 @@
 			
         </ul>
     </div>
-    <h1>Upload Page</h1>
-    <form id = "upload_form" action = "{{url_for('submitted')}}" method="POST" enctype="multipart/form-data">
-        Choose Image to upload
-        <input type="file" name="file"  accept="image/*">
-        <br>
-        Category:
+    <h1>Delete Category</h1>
+    <form id = "delete_cat_form" action = "{{url_for('del_cat_data')}}" method="POST">
+        Choose category to delete
         <br>
         {% block b1 %}
 
-        {% for cat in categories %}
+        {% for cat in category_list %}
         <input type="radio" name="category" value={{cat}}> {{cat}}<br>
         {% endfor %}  
         {% endblock %}
 
-        Enter Caption
-        <input type="text" name = "caption"> <br>      
-        <input type="submit" value="Upload"><br>
+        <input type="submit" value="Delete"><br>
 
     </form>
 
