--- a/VM1/Flask/templates/image_single.html
+++ b/VM1/Flask/templates/image_single.html
@@ -19,7 +19,7 @@
     <div id='cssmenu'>
         <ul>
             <li><a href="{{url_for('images')}}"><span>Home</span></a></li>
-            <li><a href="{{url_for('category_show')}}"><span>Category</span></a></li>
+            <li><a href="{{url_for('category_show')}}"><span>Categories</span></a></li>
             
 			{% block b %}
             {% if session['user']%}
