--- a/VM1/Flask/templates/category_le100.html
+++ b/VM1/Flask/templates/category_le100.html
@@ -49,6 +49,7 @@
 					<a href="{{url_for('show_single_image',act_id=data['actId'])}}">
 						<img src="data:image/png;base64, {{data['imgB64']}}" alt="">
 					</a>
+					{{data['actId']}}
 				</li>
 				{% endfor %}
 			</ul>
